<resources>
    <string name="app_name">financial_management_app</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Cài đặt</string>

    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="menu_home">Trang chủ</string>
    <string name="menu_wallet">Ví</string>
    <string name="menu_transaction_ledger">Giao dịch</string>
    <string name="menu_budget_ledger">Ngân sách</string>
    <string name="menu_dept_ledger">Sổ nợ</string>
    <string name="menu_utility">Tiện ích khác</string>

    <string name="manage_account">Hồ sơ</string>
    <string name="export_pdf">Xuất pdf</string>
    <string name="sign_out">Đăng xuất</string>
    <string name="change_password">Thay đổi mật khẩu</string>

    <string name="add_wallet">Thêm ví</string>
    <string name="add_budget">Thêm ngân sách</string>
    <string name="add_transaction">Thêm giao dịch</string>

    <string name="wallet_detail">Thông tin ví</string>
    <string name="budget_detail">Thông tin ngân sách</string>
    <string name="transaction_detail">Thông tin giao dịch</string>

    <string name="edit_wallet">Sửa ví</string>
    <string name="edit_budget">Sửa ngân sách</string>
    <string name="edit_transaction">Sửa giao dịch</string>
    <string name="edit_profile">Sửa hồ sơ</string>

    <string name="transaction">Giao dịch</string>
    <string name="overview">Tổng quan</string>

    <string name="signup">
        <b><u>Đăng ký</u></b>
    </string>
    <string name="login">
        <b><u>Đăng nhập</u></b>
    </string>
    <string name="forgot_password">
        <b><u>Quên mật khẩu</u></b>
    </string>
    <string name="resend_authentication_key">
        <b><u>Gửi lại mã</u></b>
    </string>

    <string name="select_wallet_type">Chọn loại ví</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>