<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_wallet"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_wallet" />
        <item
            android:id="@+id/nav_transaction_ledger"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_transaction_ledger" />
        <item
            android:id="@+id/nav_budget_ledger"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_budget_ledger" />
        <item
            android:id="@+id/nav_dept_ledger"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_dept_ledger" />
        <item
            android:id="@+id/nav_utility"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_utility" />
    </group>
</menu>