<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.financial_management_app.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.financial_management_app.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.financial_management_app.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_transaction_ledger"
        android:name="com.example.financial_management_app.fragments.TransactionLedgerFragment"
        android:label="@string/menu_transaction_ledger"
        tools:layout="@layout/fragment_transaction_ledger">
        <action
            android:id="@+id/action_TransactionFragment_to_TransactionDetailFragment"
            app:destination="@id/nav_transaction_detail" />
    </fragment>

    <fragment
        android:id="@+id/nav_wallet"
        android:name="com.example.financial_management_app.fragments.WalletFragment"
        android:label="@string/menu_wallet"
        tools:layout="@layout/fragment_wallet">
        <action
            android:id="@+id/action_WalletFragment_to_WalletDetailFragment"
            app:destination="@id/nav_wallet_detail" />
    </fragment>

    <fragment
        android:id="@+id/nav_utility"
        android:name="com.example.financial_management_app.fragments.UtilityFragment"
        android:label="@string/menu_utility"
        tools:layout="@layout/fragment_utility" />

    <fragment
        android:id="@+id/nav_add_wallet"
        android:name="com.example.financial_management_app.fragments.AddWalletFragment"
        android:label="@string/add_wallet"
        tools:layout="@layout/fragment_add_wallet">
        <action
            android:id="@+id/action_AddWalletFragment_to_WalletFragment"
            app:destination="@id/nav_wallet" />
    </fragment>

    <fragment
        android:id="@+id/nav_add_transaction"
        android:name="com.example.financial_management_app.fragments.AddTransactionFragment"
        android:label="@string/add_transaction"
        tools:layout="@layout/fragment_add_transaction">
        <action
            android:id="@+id/action_AddTransactionFragment_to_TransactionFragment"
            app:destination="@id/nav_transaction"
            />
    </fragment>

    <fragment
        android:id="@+id/nav_transaction"
        android:name="com.example.financial_management_app.fragments.TransactionFragment"
        android:label="@string/transaction"
        tools:layout="@layout/fragment_transaction">
    </fragment>

    <fragment
        android:id="@+id/nav_transaction_detail"
        android:name="com.example.financial_management_app.fragments.TransactionDetailFragment"
        android:label="@string/transaction_detail"
        tools:layout="@layout/fragment_transaction_detail">
        <action
            android:id="@+id/action_TransactionDetailFragment_to_EditTransactionFragment"
            app:destination="@id/nav_edit_transaction" />
    </fragment>

    <fragment
        android:id="@+id/nav_edit_transaction"
        android:name="com.example.financial_management_app.fragments.EditTransactionFragment"
        android:label="@string/edit_transaction"
        tools:layout="@layout/fragment_edit_transaction" />

    <fragment
        android:id="@+id/nav_overview"
        android:name="com.example.financial_management_app.fragments.OverviewFragment"
        android:label="@string/overview"
        tools:layout="@layout/fragment_overview" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.financial_management_app.fragments.ProfileFragment"
        android:label="@string/manage_account"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_ProfileFragment_to_EditProfileFragment"
            app:destination="@id/nav_edit_profile" />
        <action
            android:id="@+id/action_ProfileFragment_to_ChangePasswordFragment"
            app:destination="@id/nav_change_password" />
    </fragment>

    <fragment
        android:id="@+id/nav_change_password"
        android:name="com.example.financial_management_app.fragments.ChangePasswordFragment"
        android:label="@string/change_password"
        tools:layout="@layout/fragment_change_password" />

    <fragment
        android:id="@+id/nav_edit_profile"
        android:name="com.example.financial_management_app.fragments.EditProfileFragment"
        android:label="@string/edit_profile"
        tools:layout="@layout/fragment_edit_profile" />

    <fragment
        android:id="@+id/nav_budget_ledger"
        android:name="com.example.financial_management_app.fragments.BudgetLedgerFragment"
        android:label="@string/menu_budget_ledger"
        tools:layout="@layout/fragment_budget_ledger">
        <action
            android:id="@+id/action_BudgetLedgerFragment_to_BudgetDetailFragment"
            app:destination="@id/nav_budget_detail" />
    </fragment>

    <fragment
        android:id="@+id/nav_add_budget"
        android:name="com.example.financial_management_app.fragments.AddBudgetFragment"
        android:label="@string/add_budget"
        tools:layout="@layout/fragment_add_budget">
        <action
            android:id="@+id/action_AddBudgetFragment_to_BudgetLedgerFragment"
            app:destination="@id/nav_budget_ledger" />
    </fragment>

    <fragment
        android:id="@+id/nav_wallet_detail"
        android:name="com.example.financial_management_app.fragments.WalletDetailFragment"
        android:label="@string/wallet_detail"
        tools:layout="@layout/fragment_wallet_detail">
        <argument
            android:name="wallet_id"
            app:argType="integer"/>
        <action
            android:id="@+id/action_WalletDetailFragment_to_EditWalletFragment"
            app:destination="@id/nav_edit_wallet"/>
    </fragment>

    <fragment
        android:id="@+id/nav_edit_wallet"
        android:name="com.example.financial_management_app.fragments.EditWalletFragment"
        android:label="@string/edit_wallet"
        tools:layout="@layout/fragment_edit_wallet" />

    <fragment
        android:id="@+id/nav_budget_detail"
        android:name="com.example.financial_management_app.fragments.BudgetDetailFragment"
        android:label="@string/budget_detail"
        tools:layout="@layout/fragment_budget_detail">
        <argument
            android:name="budget_id"
            app:argType="integer"/>
        <action
            android:id="@+id/action_BudgetDetailFragment_to_EditBudgetFragment"
            app:destination="@id/nav_edit_budget"/>
    </fragment>

    <fragment
        android:id="@+id/nav_edit_budget"
        android:name="com.example.financial_management_app.fragments.EditBudgetFragment"
        android:label="@string/edit_budget"
        tools:layout="@layout/fragment_edit_budget" />

</navigation>